# ADSense

./: README.md  pyproject.toml
adsense/: __main__.py  cli.py  connection.py
adsense/analyser/: models.py
adsense/collector/: __init__.py  accounts.py  asreproast.py  computers.py  domain_policy.py  groups.py  kerberoastable.py  laps.py
adsense/output/: console.py  markdown.py  tables.py
