[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsense"
version = "1.0.0"
description = "AD situational awareness - first 5 minutes recon after domain creds"
requires-python = ">=3.9"
dependencies = [
    "ldap3>=2.9",
    "impacket>=0.11",
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
adsense = "adsense.cli:main"

[tool.setuptools.packages.find]
include = ["adsense*"]
